@@ -34,7 +34,6 @@
 #include "common.h"
 #include "sys.h"
 #include "numeric.h"
-#include "userload.h"
 #include <sys/stat.h>
 #include <fcntl.h>
 #include <sys/types.h>
